--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html>
 <head>
-<title>HTML5 Überblick</title>
+<title>HTML5 Ãœberblick</title>
 
 <style>
 ul#navig {
@@ -108,15 +108,15 @@ article{
 <td><b>Beschreibung:</b></td>
 <td>
 <ul>
-  <li>Freier (GPL) Texteditor für Code</li>
+  <li>Freier (GPL) Texteditor fÃ¼r Code</li>
   <li>Hohe Performance durch Limitierung auf C++ mit Win32 API und STL</li>
   <li>Syntax Highlighting und Folding</li>
   <li>Regular Expression Search/Replace</li>
-  <li>Automatische Vervollständigung</li>
+  <li>Automatische VervollstÃ¤ndigung</li>
   <li>Mehrfache Dokumente (Tabs)</li>
-  <li>Rechtschreibprüfung</li>
+  <li>RechtschreibprÃ¼fung</li>
   <li>Viele Sprachen</li>
-  <li>Mehrfaches Selektieren, Einfügen und Löschen</li>
+  <li>Mehrfaches Selektieren, EinfÃ¼gen und LÃ¶schen</li>
   <li>Viele Erweiterungen</li>
 </ul>
 </td>
@@ -148,14 +148,14 @@ article{
 <td><b>Beschreibung:</b></td>
 <td>
 <ul>
-  <li>Hochentwickelter Texteditor für Code</li>
+  <li>Hochentwickelter Texteditor fÃ¼r Code</li>
   <li>Hohe Performance</li>
   <li>Stark Customizable</li>
-  <li>Rechtschreibprüfung</li>
-  <li>Automatische Vervollständigung</li>
+  <li>RechtschreibprÃ¼fung</li>
+  <li>Automatische VervollstÃ¤ndigung</li>
   <li>Visuelles Highlighting</li>
   <li>Regular Expression Search/Replace</li>
-  <li>Mehrfaches Selektieren, Einfügen und Löschen</li>
+  <li>Mehrfaches Selektieren, EinfÃ¼gen und LÃ¶schen</li>
   <li>Einfache Navigation</li>
   <li>Viele Erweiterungen</li>
 </ul>
@@ -174,7 +174,7 @@ article{
 <td>Adobe</td>
 </tr><tr>
 <td><b>Preis:</b></td>
-<td>23,99€ / Monat</td>
+<td>23,99â‚¬ / Monat</td>
 </tr>
 </tr><tr>
 <td><b>OS:</b></td>
@@ -189,15 +189,15 @@ article{
 <td>
 <ul>
   <li>WYSIWYG-Editors mit paralleler Quelltextbearbeitung</li>
-  <li>Codehints für Einsteiger</li>
+  <li>Codehints fÃ¼r Einsteiger</li>
   <li>visuelle Hilfen zur Fehlervermeidung und Verbesserung der Lesbarkeit</li>
-  <li>Echtzeit Vorschau auf unterschiedlichen Endgeräten</li>
-  <li>Echtzeit Fehlerprüfungen</li>
-  <li>Optimierungen für jeden Browser und jedes Endgerät</li>
+  <li>Echtzeit Vorschau auf unterschiedlichen EndgerÃ¤ten</li>
+  <li>Echtzeit FehlerprÃ¼fungen</li>
+  <li>Optimierungen fÃ¼r jeden Browser und jedes EndgerÃ¤t</li>
   <li>Startvorlagen</li>
   <li>Responsive Webdesign</li>
   <li>Integration von CSS3, Bootstrap, JavaScript, PHP uvm.</li>
-  <li>Großer Funktionsumfang</li>
+  <li>GroÃŸer Funktionsumfang</li>
 </ul>
 </td>
 </tr>
@@ -214,7 +214,7 @@ article{
 <td>Disruptive Innovations SAS</td>
 </tr><tr>
 <td><b>Preis:</b></td>
-<td>69,99€ (limitierte freie Version)</td>
+<td>69,99â‚¬ (limitierte freie Version)</td>
 </tr>
 </tr><tr>
 <td><b>OS:</b></td>
@@ -231,11 +231,11 @@ article{
   <li>Next-gen Web und EPUB Editor basierend auf der rendering engine von Firefox</li>
   <li>WYSIWYG-Editors mit paralleler Quelltextbearbeitung</li>
   <li>User Interface in 20 Sprachen</li>
-  <li>Anpassbares Menü und Shortcuts</li>
-  <li>Großer Funktionsumfang</li>
+  <li>Anpassbares MenÃ¼ und Shortcuts</li>
+  <li>GroÃŸer Funktionsumfang</li>
   <li>Viele Templates</li>
   <li>Mobile Viewer</li>
-  <li>Unterstützt HTML5, CSS3, XHTML, SVG uvm.</li>
+  <li>UnterstÃ¼tzt HTML5, CSS3, XHTML, SVG uvm.</li>
 </ul>
 </td>
 </tr>
@@ -251,11 +251,11 @@ article{
 <table>
 <tr>
 <td>1980</td>
-<td>Der bei CERN angestellte Physiker Tim Berners-Lee entwickelt das Hypertext Programm ENQUIRE um es den Mitarbeitern zu ermöglichen Dokumente zu teilen.</td>
+<td>Der bei CERN angestellte Physiker Tim Berners-Lee entwickelt das Hypertext Programm ENQUIRE um es den Mitarbeitern zu ermÃ¶glichen Dokumente zu teilen.</td>
 </tr>
 <tr>
 <td>1989</td>
-<td>Berners-Lee schlägt in einem Memo ein internetbasiertes Hypertext-System vor.</td>
+<td>Berners-Lee schlÃ¤gt in einem Memo ein internetbasiertes Hypertext-System vor.</td>
 </tr>
 <tr>
 <td>1990</td>
@@ -263,23 +263,23 @@ article{
 </tr>
 <tr>
 <td>1991</td>
-<td>Die este öffentlich verfügbare Beschreibung von HTML in Form eines Dokuments namens "HTML Tags" wird von Berners-Lee herausgebracht. Sie enthielt 18 Elemente die das initiale Design von HTML beschrieben.</td>
+<td>Die este Ã¶ffentlich verfÃ¼gbare Beschreibung von HTML in Form eines Dokuments namens "HTML Tags" wird von Berners-Lee herausgebracht. Sie enthielt 18 Elemente die das initiale Design von HTML beschrieben.</td>
 </tr>
 <tr>
 <td>1993</td>
-<td>Der erste Vorschlag für eine HTML Spezifikation von Berners-Lee und Dan Connolly in einem Entwurf namens "Hypertext Markup Language (HTML)" veröffentlicht.</td>
+<td>Der erste Vorschlag fÃ¼r eine HTML Spezifikation von Berners-Lee und Dan Connolly in einem Entwurf namens "Hypertext Markup Language (HTML)" verÃ¶ffentlicht.</td>
 </tr>
 <tr>
 <td>1994</td>
-<td>Die Internet Engineering Task Force (IETF) gründete eine HTML Arbeitsgruppe.</td>
+<td>Die Internet Engineering Task Force (IETF) grÃ¼ndete eine HTML Arbeitsgruppe.</td>
 </tr>
 <tr>
 <td>1995</td>
-<td>Mit "HTML 2.0" wird von der IETF Arbeitsgruppe die erste HTML Spezifikation veröffentlicht, die als Standard für zukünftige Implementationen dienen sollte.</td>
+<td>Mit "HTML 2.0" wird von der IETF Arbeitsgruppe die erste HTML Spezifikation verÃ¶ffentlicht, die als Standard fÃ¼r zukÃ¼nftige Implementationen dienen sollte.</td>
 </tr>
 <tr>
 <td>1996</td>
-<td>Das World Wide Web Consortium (W3C) übernimmt die Entwicklung und Standardisierung von HTML.</td>
+<td>Das World Wide Web Consortium (W3C) Ã¼bernimmt die Entwicklung und Standardisierung von HTML.</td>
 </tr>
 <tr>
 <td>2000</td>
@@ -299,12 +299,12 @@ article{
 <tr>
 <td>HTML</td>
 <td>04/1993</td>
-<td>Attribute für fette oder kursive Darstellung von Text und Bildintegration.</td>
+<td>Attribute fÃ¼r fette oder kursive Darstellung von Text und Bildintegration.</td>
 </tr>
 <tr>
 <td>HTML 2.0</td>
 <td>11/1995</td>
-<td>Die mit RFC 1866 definierte Version führt u. a. Formulartechnik ein.</td>
+<td>Die mit RFC 1866 definierte Version fÃ¼hrt u. a. Formulartechnik ein.</td>
 </tr>
 <tr>
 <td>HTML 3.2</td>
@@ -314,7 +314,7 @@ article{
 <tr>
 <td>HTML 4.0</td>
 <td>12/1997</td>
-<td>Einführung von Stylesheets, Skripten und Frames.</td>
+<td>EinfÃ¼hrung von Stylesheets, Skripten und Frames.</td>
 </tr>
 <tr>
 <td>HTML 4.01</td>
@@ -334,7 +334,7 @@ article{
 <tr>
 <td>HTML5</td>
 <td>10/2014</td>
-<td>Schafft auf Basis von HTML 4.01 und XHTML 1.0 ein neues Vokabular. Die zu HTML gehörende DOM-Spezifikation wurde ebenfalls überarbeitet und erweitert.</td>
+<td>Schafft auf Basis von HTML 4.01 und XHTML 1.0 ein neues Vokabular. Die zu HTML gehÃ¶rende DOM-Spezifikation wurde ebenfalls Ã¼berarbeitet und erweitert.</td>
 </tr>
 <tr>
 <td>HTML 5.1</td>
