--- a/index.html
+++ b/index.html
@@ -353,12 +353,17 @@ cn {
 <article>
 <h3>Dokumenttypangabe</h3>
 <p>HTML5-Dokumente beinhalten eine Dokumententypangabe in Form der Zeichenkette <cn>&lt!DOCTYPE html&gt</cn> um ein standardkonformes Rendering im Browser auszulösen.<br>Auf Versionierung wurde bewusst verzichtet, da HTML5 Rückwärtskompatibel ist und alle Elemente aus HTML 4.01 enthält.</p>
+</article>
+
+<article>
 <h3>Einbindung von SVG und MathML im Quelltext</h3>
 <p><ul>
 <li>Scalable Vector Graphics (SVG) ist eine Spezifikation zur Beschreibung zweidimensionaler Vektorgrafiken.</li>
 <li>Mathematical Markup Language (MathML) ist ein Dokumentenformat zur Darstellung mathematischer Formeln.</li>
 </ul></p>
+</article>
 
+<article>
 <h3>Strukturierende Elemente</h3>
 <table>
 <tr>
@@ -393,7 +398,9 @@ cn {
 <td>Definiert den Fussbereich einer Seite/Sektion</td>
 </tr>
 </table>
+</article>
 
+<article>
 <h3>Elemente zur Textauszeichnung</h3>
 <table>
 <tr>
@@ -414,7 +421,9 @@ cn {
 <td>Definiert hervorgehobenen Text</td>
 </tr>
 </table>
+</article>
 
+<article>
 <h3>Multimedia-Elemente</h3>
 <table>
 <tr>
@@ -425,7 +434,9 @@ cn {
 <td>Definiert eine Zeichenfläche, auf der mittels Sktipten zweidimensionale Bilder gezeichnet werden können.</td>
 </tr>
 </table>
+</article>
 
+<article>
 <h3>Formularelemente</h3>
 <table>
 <tr>
@@ -454,7 +465,9 @@ cn {
 <li>Um neue Typen z. B. zur Eingabe von Suchbegriffen, Telefonnummern, URL- und E-Mail-Adressen, Datums- und Zeitangaben, Zahlen sowie Farbangaben</li>
 <li>Um neue Attribute z. B. zur automatischen Vervollständigung, automatische Fokusierung, Festlegung von Minima und Maxima, Textmustervalidierung sowie Platzhalter-Werte</li>
 </ul>
+</article>
 
+<article>
 <h3>Interaktive Elemente</h3>
 <table>
 <tr>
@@ -466,7 +479,9 @@ cn {
 <td>Das <cn>menu</cn>-Element dient als Struktur für einzelne <cn>command</cn>-Elemente als Interaktionspunkt in Werkzeugleisten und (Kontext-)Menüs</td>
 </tr>
 </table>
+</article>
 
+<article>
 <h3>Neue API's (Application Programming Interfaces)</h3>
 <p>
 <ul>
