--- a/style.html
+++ b/style.html
@@ -1,7 +1,7 @@
 ﻿<html>
 <body style="background-color:blue;">
-<h1 style="color:red;font-family:verdana;">Rote Überschrift in Schriftart Verdana</h1>
-<p style="color:yellow;font-family:courier;">Gelber Paragraph in Schriftart Courier</p>
+<h1 style="color:rgb(255,0,0);font-family:verdana;">Rote Überschrift in Schriftart Verdana</h1>
+<p style="color:#FFFF00;font-family:courier;">Gelber Paragraph in Schriftart Courier</p>
 <h1 style="font-size:100%;text-align:center;">Zentrierte Überschrift in einfacher Schriftgröße</h1>
 <p style="text-align:right;font-size:200%;">Rechtsbündiger Paragraph in zweifacher Schriftgröße</p>
 </body>
